--- a/site/style.css
+++ b/site/style.css
@@ -4,7 +4,8 @@ html {
 }
 
 body {
-	background-image: linear-gradient(215deg,#061161 25%,#780206);
+	/*background-image: linear-gradient(215deg,#061161 25%,#780206);*/
+	background-color: rgba(30, 30, 30, 1.0);
 	font-family: monospace;
 	background-repeat: no-repeat;
 	margin-top: 9em;
@@ -72,6 +73,14 @@ div.entrada {
 	text-align: center;
 
 
+}
+
+div.search {
+	position: absolute;
+	display: flex;
+	right: 0;
+	margin-top: 1.5em;
+	margin-right: 3em;
 }
 
 .entrada>label {
@@ -143,6 +152,12 @@ header>#logo {
 	margin-top: 0.3em;
 }
 
+header:hover>.search, header:focus-within>.search {
+	position: absolute;
+	margin-top: 2.5em;
+	margin-right: 8em;
+}
+
 header>#menu{
 	position: absolute;
 	right: 0;
@@ -155,18 +170,25 @@ header>#menu>div{
 	height: 0.6em;
 	background-color: whitesmoke;
 	margin-top: 0.6em;
+	transition: 1s;
 }
 
-header:hover {
-	height: 8em;
+header:hover, header:focus-within {
+	height: 7em;
 }
 
-header:hover>#menu {
+header:hover>#menu, header:focus-within>#menu {
 	margin-top: 2em;
 }
 
-header:hover>* {
-	scale: 1;
+header:hover>*, header:focus-within>* {
+	scale: 0.9;
 	margin-left: 1em;
 	margin-right: 2em;
 }
+
+input[type="search"]:focus {
+	width:100%;
+	text-align: left;
+}
+
